<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>reservas</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>reservas</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-devtools</artifactId>
    		<optional>true</optional>
		</dependency>
		
	    <!-- SPRING SECURITY -->
	    <dependency>
             <groupId>org.springframework.boot</groupId>
    		 <artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- JWT (manejo de tokens) -->
		 <dependency>
    		 <groupId>io.jsonwebtoken</groupId>
    		 <artifactId>jjwt-api</artifactId>
    		 <version>0.11.5</version>
		 </dependency>
		 <dependency>
    		 <groupId>io.jsonwebtoken</groupId>
    		 <artifactId>jjwt-impl</artifactId>
    		 <version>0.11.5</version>
    		 <scope>runtime</scope>
		 </dependency>
		 <dependency>
    		 <groupId>io.jsonwebtoken</groupId>
  		 	 <artifactId>jjwt-jackson</artifactId>
   			 <version>0.11.5</version>
    		 <scope>runtime</scope>
		 </dependency>
		 <dependency>
    		 <groupId>org.springdoc</groupId>
    		 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
    		 <version>2.5.0</version>
		 </dependency>
		 <dependency>
    	     <groupId>org.springframework.boot</groupId>
    		 <artifactId>spring-boot-starter-thymeleaf</artifactId>
		 </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
                  <mainClass>com.example.reservas.ReservasApplication</mainClass>
                </configuration>
			</plugin>
		</plugins>
	</build>

</project>
